--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 <body>
   <nav class="zone green">
     <ul class="mainnav">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Products</a></li>
-      <li><a href="#">Our Team</a></li>
-      <li class='push'><a href="#">Contact</a></li>
+      <li><a href="https://www.merriam-webster.com/dictionary/about">About</a></li>
+      <li><a href="https://www.merriam-webster.com/dictionary/products">Products</a></li>
+      <li><a href="https://www.merriam-webster.com/dictionary/team">Our Team</a></li>
+      <li class='push'><a href="https://www.merriam-webster.com/dictionary/contact">Contact</a></li>
     </ul>
   </nav>
   <div class="zone red">Cover</div>
